--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "vite": "^4.4.5",
+    "vite-plugin-top-level-await": "^1.4.1",
     "vitest": "^0.34.6"
   }
 }
